# bestiary

./: .gitignore  Cargo.toml  README.md  SPEC.md  build.rs  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  release.yml
apps/: a2j.yaml  abahb.yaml  abrt.yaml  accept-languages-codes.yaml  act.yaml  airshipper.yaml  akonadi-akonotes.yaml  akonadi-contacts.yaml  akonadi-firstrun.yaml  akonadi-ical.yaml  akonadi-indexing.yaml  akonadi-maildir.yaml  akonadi-migration-rc.yaml  akonadi-migration.yaml  akonadi.yaml  akregator.yaml  alien-isolation.yaml  alvr.yaml  am2r.yaml  amnesia-rebirth.yaml  amulet-map-editor.yaml  android-sdk.yaml  aosp.yaml  applications.yaml  aquaria.yaml  arcmenu.yaml  ardour.yaml  ark-state.yaml  ark.yaml  aspnet.yaml  aspyr-media.yaml  audacious.yaml  audacity-state.yaml  audacity.yaml  aurorae.yaml  autostart.yaml  aws-cf-lsp.yaml  aws.yaml  backgrounds.yaml  badland.yaml  (+840 more)
schema/: app.schema.json
site/: app.js  index.html  style.css
src/: catalog.rs  cli.rs  creature.rs  lib.rs  main.rs
tests/: schema.rs
